--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -890,6 +890,21 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.my-2\.5 {
+  margin-top: 0.625rem;
+  margin-bottom: 0.625rem;
+}
+
+.mx-\[18px\] {
+  margin-left: 18px;
+  margin-right: 18px;
+}
+
+.my-\[18px\] {
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+
 .-mb-1 {
   margin-bottom: -0.25rem;
 }
@@ -954,6 +969,10 @@ video {
   margin-top: auto;
 }
 
+.mt-2\.5 {
+  margin-top: 0.625rem;
+}
+
 .line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -999,6 +1018,11 @@ video {
 .size-6 {
   width: 1.5rem;
   height: 1.5rem;
+}
+
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .h-0\.5 {
@@ -1091,6 +1115,14 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-\[1px\] {
+  height: 1px;
+}
+
+.h-\[51px\] {
+  height: 51px;
 }
 
 .max-h-\[465px\] {
@@ -1213,12 +1245,20 @@ video {
   width: 1px;
 }
 
+.w-auto {
+  width: auto;
+}
+
 .max-w-24 {
   max-width: 6rem;
 }
 
 .max-w-\[201px\] {
   max-width: 201px;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
 }
 
 .translate-y-1\/2 {
@@ -1241,6 +1281,10 @@ video {
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -1344,6 +1388,11 @@ video {
 
 .gap-y-\[3px\] {
   row-gap: 3px;
+}
+
+.gap-x-1\.5 {
+  -moz-column-gap: 0.375rem;
+       column-gap: 0.375rem;
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1497,6 +1546,16 @@ video {
   background-color: rgb(255 255 255 / 0.2);
 }
 
+.bg-orange-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 215 170 / var(--tw-bg-opacity, 1));
+}
+
+.bg-orange-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 237 213 / var(--tw-bg-opacity, 1));
+}
+
 .bg-gradient-to-l {
   background-image: linear-gradient(to left, var(--tw-gradient-stops));
 }
@@ -1621,6 +1680,16 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pb-12 {
@@ -2106,6 +2175,10 @@ video {
     height: auto;
   }
 
+  .xs\:w-\[130px\] {
+    width: 130px;
+  }
+
   .xs\:gap-x-2 {
     -moz-column-gap: 0.5rem;
          column-gap: 0.5rem;
@@ -2113,6 +2186,16 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:mx-5 {
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
+  }
+
+  .sm\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
   .sm\:mb-0 {
     margin-bottom: 0px;
   }
@@ -2127,6 +2210,18 @@ video {
 
   .sm\:mt-\[15px\] {
     margin-top: 15px;
+  }
+
+  .sm\:block {
+    display: block;
+  }
+
+  .sm\:flex {
+    display: flex;
+  }
+
+  .sm\:hidden {
+    display: none;
   }
 
   .sm\:h-12 {
@@ -2149,6 +2244,10 @@ video {
     height: auto;
   }
 
+  .sm\:h-\[61px\] {
+    height: 61px;
+  }
+
   .sm\:w-12 {
     width: 3rem;
   }
@@ -2169,12 +2268,32 @@ video {
     width: 98px;
   }
 
+  .sm\:w-\[300px\] {
+    width: 300px;
+  }
+
+  .sm\:w-\[193px\] {
+    width: 193px;
+  }
+
+  .sm\:w-\[1px\] {
+    width: 1px;
+  }
+
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
+  .sm\:flex-col {
+    flex-direction: column;
   }
 
   .sm\:gap-x-10 {
@@ -2252,6 +2371,14 @@ video {
   .sm\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
+  }
+
+  .group:hover .sm\:group-hover\:visible {
+    visibility: visible;
+  }
+
+  .group:hover .sm\:group-hover\:opacity-100 {
+    opacity: 1;
   }
 }
 
