--- a/src/input.css
+++ b/src/input.css
@@ -100,6 +100,34 @@
   .swiper-button-prev-custom {
     @apply rotate-180;
   }
+  .services{
+    @apply relative;
+  } 
+
+  @media screen and (min-width: 480px) {
+   .services::after,.services::before{
+    content: none;
+   }
+  }
+  .services::after, .services::before{
+    content: "";
+    display: block;
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    background-color: #D1D5DB;
+  }
+  html.dark .services::after, html.dark .services::before{
+    background-color: rgba(255, 255, 255,0.1);
+  }
+  .services::after{
+    width: 1px;
+    height: calc(100% + 2rem);
+  }
+  .services::before{
+    width: calc(100% - 1.5rem);
+    height: 1px;
+  }
 }
 
 @layer utilities {
