--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -843,6 +843,29 @@ html.dark .services::after, html.dark .services::before{
   height: 1px;
 }
 
+.custom-marker {
+  position: relative;
+}
+
+.custom-marker::before{
+  content: "";
+  display: block;
+  background-color: currentColor;
+  position: absolute;
+  top: 50%;
+  right: -1rem;
+  height: 0.25rem;
+  width: 0.5rem;
+  border-radius: 9999px;
+}
+
+@media (min-width: 640px) {
+  .custom-marker::before {
+    right: -1.25rem;
+    width: 0.625rem;
+  }
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -933,11 +956,6 @@ html.dark .services::after, html.dark .services::before{
   margin-bottom: 18px;
 }
 
-.mx-24 {
-  margin-left: 6rem;
-  margin-right: 6rem;
-}
-
 .-mb-1 {
   margin-bottom: -0.25rem;
 }
@@ -970,6 +988,10 @@ html.dark .services::after, html.dark .services::before{
   margin-bottom: 1.25rem;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .mb-7 {
   margin-bottom: 1.75rem;
 }
@@ -982,12 +1004,24 @@ html.dark .services::after, html.dark .services::before{
   margin-bottom: 76px;
 }
 
+.mr-auto {
+  margin-right: auto;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
 .mt-0\.5 {
   margin-top: 0.125rem;
 }
 
 .mt-1\.5 {
   margin-top: 0.375rem;
+}
+
+.mt-11 {
+  margin-top: 2.75rem;
 }
 
 .mt-2 {
@@ -1004,6 +1038,10 @@ html.dark .services::after, html.dark .services::before{
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .mt-auto {
@@ -1078,6 +1116,10 @@ html.dark .services::after, html.dark .services::before{
   height: 4rem;
 }
 
+.h-2\.5 {
+  height: 0.625rem;
+}
+
 .h-24 {
   height: 6rem;
 }
@@ -1138,6 +1180,10 @@ html.dark .services::after, html.dark .services::before{
   height: 51px;
 }
 
+.h-\[54px\] {
+  height: 54px;
+}
+
 .h-\[68px\] {
   height: 68px;
 }
@@ -1170,16 +1216,16 @@ html.dark .services::after, html.dark .services::before{
   min-height: 24rem;
 }
 
-.min-h-full {
-  min-height: 100%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
 
 .w-11 {
   width: 2.75rem;
+}
+
+.w-2\.5 {
+  width: 0.625rem;
 }
 
 .w-28 {
@@ -1262,6 +1308,10 @@ html.dark .services::after, html.dark .services::before{
   width: 41px;
 }
 
+.w-\[57px\] {
+  width: 57px;
+}
+
 .w-\[68px\] {
   width: 68px;
 }
@@ -1290,6 +1340,10 @@ html.dark .services::after, html.dark .services::before{
   max-width: 6rem;
 }
 
+.max-w-96 {
+  max-width: 24rem;
+}
+
 .max-w-\[201px\] {
   max-width: 201px;
 }
@@ -1298,13 +1352,13 @@ html.dark .services::after, html.dark .services::before{
   flex-shrink: 0;
 }
 
-.translate-y-1\/2 {
-  --tw-translate-y: 50%;
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
+.translate-y-1\/2 {
+  --tw-translate-y: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1348,6 +1402,10 @@ html.dark .services::after, html.dark .services::before{
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-end {
@@ -1396,9 +1454,19 @@ html.dark .services::after, html.dark .services::before{
        column-gap: 0.375rem;
 }
 
+.gap-x-11 {
+  -moz-column-gap: 2.75rem;
+       column-gap: 2.75rem;
+}
+
 .gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
+}
+
+.gap-x-28 {
+  -moz-column-gap: 7rem;
+       column-gap: 7rem;
 }
 
 .gap-x-3 {
@@ -1430,8 +1498,20 @@ html.dark .services::after, html.dark .services::before{
   row-gap: 0.125rem;
 }
 
+.gap-y-10 {
+  row-gap: 2.5rem;
+}
+
 .gap-y-11 {
   row-gap: 2.75rem;
+}
+
+.gap-y-2\.5 {
+  row-gap: 0.625rem;
+}
+
+.gap-y-3 {
+  row-gap: 0.75rem;
 }
 
 .gap-y-4 {
@@ -1569,9 +1649,22 @@ html.dark .services::after, html.dark .services::before{
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
+.border-orange-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(254 215 170 / var(--tw-border-opacity, 1));
+}
+
 .border-orange-300 {
   --tw-border-opacity: 1;
   border-color: rgb(253 186 116 / var(--tw-border-opacity, 1));
+}
+
+.border-white\/10 {
+  border-color: rgb(255 255 255 / 0.1);
+}
+
+.border-white\/20 {
+  border-color: rgb(255 255 255 / 0.2);
 }
 
 .bg-black\/50 {
@@ -1624,6 +1717,10 @@ html.dark .services::after, html.dark .services::before{
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
 .bg-home-mobile {
   background-image: url('../images/headerBgMobile.webp');
 }
@@ -1631,6 +1728,12 @@ html.dark .services::after, html.dark .services::before{
 .from-emerald-500 {
   --tw-gradient-from: #10b981 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(16 185 129 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-orange-200 {
+  --tw-gradient-from: #fed7aa var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(254 215 170 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -1652,6 +1755,10 @@ html.dark .services::after, html.dark .services::before{
 
 .to-orange-200 {
   --tw-gradient-to: #fed7aa var(--tw-gradient-to-position);
+}
+
+.to-orange-300 {
+  --tw-gradient-to: #fdba74 var(--tw-gradient-to-position);
 }
 
 .to-orange-300\/80 {
@@ -1762,9 +1869,8 @@ html.dark .services::after, html.dark .services::before{
   padding-bottom: 15px;
 }
 
-.px-24 {
-  padding-left: 6rem;
-  padding-right: 6rem;
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .pb-12 {
@@ -1787,6 +1893,10 @@ html.dark .services::after, html.dark .services::before{
   padding-right: 0.5rem;
 }
 
+.pr-4 {
+  padding-right: 1rem;
+}
+
 .pr-7 {
   padding-right: 1.75rem;
 }
@@ -1799,16 +1909,12 @@ html.dark .services::after, html.dark .services::before{
   padding-top: 2rem;
 }
 
-.pb-11 {
-  padding-bottom: 2.75rem;
-}
-
-.pt-16 {
-  padding-top: 4rem;
-}
-
 .text-center {
   text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 .text-end {
@@ -1911,6 +2017,11 @@ html.dark .services::after, html.dark .services::before{
   color: rgb(243 244 246 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
+}
+
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
@@ -1998,6 +2109,10 @@ html.dark .services::after, html.dark .services::before{
 
 .custom-rtl {
   direction: rtl;
+}
+
+.custom-ltr {
+  direction: ltr;
 }
 
 .custom-scrollbar-1::-webkit-scrollbar {
@@ -2145,6 +2260,20 @@ html.dark .services::after, html.dark .services::before{
   background-color: rgb(15 118 110 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-gradient-to-l:hover {
+  background-image: linear-gradient(to left, var(--tw-gradient-stops));
+}
+
+.hover\:from-orange-200:hover {
+  --tw-gradient-from: #fed7aa var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(254 215 170 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.hover\:to-orange-300:hover {
+  --tw-gradient-to: #fdba74 var(--tw-gradient-to-position);
+}
+
 .hover\:text-orange-300:hover {
   --tw-text-opacity: 1;
   color: rgb(253 186 116 / var(--tw-text-opacity, 1));
@@ -2153,6 +2282,11 @@ html.dark .services::after, html.dark .services::before{
 .hover\:text-teal-600:hover {
   --tw-text-opacity: 1;
   color: rgb(13 148 136 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-zinc-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity, 1));
 }
 
 .focus\:outline-none:focus {
@@ -2235,6 +2369,11 @@ html.dark .services::after, html.dark .services::before{
   text-align: center;
 }
 
+.child\:text-base\/7 > * {
+  font-size: 1rem;
+  line-height: 1.75rem;
+}
+
 .child\:leading-\[56px\] > * {
   line-height: 56px;
 }
@@ -2247,6 +2386,12 @@ html.dark .services::after, html.dark .services::before{
 .child\:text-zinc-700 > * {
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity, 1));
+}
+
+.child\:transition-all > * {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .child\:transition-colors > * {
@@ -2279,6 +2424,16 @@ html.dark .services::after, html.dark .services::before{
     -moz-column-gap: 0.5rem;
          column-gap: 0.5rem;
   }
+
+  .xs\:px-\[15px\] {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .xs\:py-\[11px\] {
+    padding-top: 11px;
+    padding-bottom: 11px;
+  }
 }
 
 @media (min-width: 640px) {
@@ -2300,12 +2455,28 @@ html.dark .services::after, html.dark .services::before{
     margin-bottom: 7rem;
   }
 
+  .sm\:mb-4\.5 {
+    margin-bottom: 18px;
+  }
+
   .sm\:mt-2 {
     margin-top: 0.5rem;
   }
 
+  .sm\:mt-7 {
+    margin-top: 1.75rem;
+  }
+
   .sm\:mt-\[15px\] {
     margin-top: 15px;
+  }
+
+  .sm\:mt-\[26px\] {
+    margin-top: 26px;
+  }
+
+  .sm\:mt-\[42px\] {
+    margin-top: 42px;
   }
 
   .sm\:flex {
@@ -2326,6 +2497,10 @@ html.dark .services::after, html.dark .services::before{
 
   .sm\:h-8 {
     height: 2rem;
+  }
+
+  .sm\:h-\[38px\] {
+    height: 38px;
   }
 
   .sm\:h-\[61px\] {
@@ -2368,6 +2543,10 @@ html.dark .services::after, html.dark .services::before{
     width: 300px;
   }
 
+  .sm\:w-\[38px\] {
+    width: 38px;
+  }
+
   .sm\:w-\[98px\] {
     width: 98px;
   }
@@ -2403,8 +2582,22 @@ html.dark .services::after, html.dark .services::before{
          column-gap: 1.25rem;
   }
 
+  .sm\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
+  .sm\:gap-x-\[69px\] {
+    -moz-column-gap: 69px;
+         column-gap: 69px;
+  }
+
   .sm\:gap-y-1\.5 {
     row-gap: 0.375rem;
+  }
+
+  .sm\:gap-y-5 {
+    row-gap: 1.25rem;
   }
 
   .sm\:px-11 {
@@ -2412,9 +2605,32 @@ html.dark .services::after, html.dark .services::before{
     padding-right: 2.75rem;
   }
 
+  .sm\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  .sm\:px-\[30px\] {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
   .sm\:py-\[23px\] {
     padding-top: 23px;
     padding-bottom: 23px;
+  }
+
+  .sm\:py-\[5px\] {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  .sm\:pb-11 {
+    padding-bottom: 2.75rem;
+  }
+
+  .sm\:pt-16 {
+    padding-top: 4rem;
   }
 
   .sm\:pt-5 {
@@ -2465,9 +2681,57 @@ html.dark .services::after, html.dark .services::before{
     line-height: 1.75rem;
   }
 
+  .sm\:text-xl\/\[48px\] {
+    font-size: 1.25rem;
+    line-height: 48px;
+  }
+
   .sm\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
+  }
+
+  .sm\:hover\:cursor-pointer:hover {
+    cursor: pointer;
+  }
+
+  .sm\:hover\:bg-teal-600:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(13 148 136 / var(--tw-bg-opacity, 1));
+  }
+
+  .sm\:hover\:bg-teal-700:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(15 118 110 / var(--tw-bg-opacity, 1));
+  }
+
+  .sm\:hover\:bg-gradient-to-l:hover {
+    background-image: linear-gradient(to left, var(--tw-gradient-stops));
+  }
+
+  .sm\:hover\:from-orange-200:hover {
+    --tw-gradient-from: #fed7aa var(--tw-gradient-from-position);
+    --tw-gradient-to: rgb(254 215 170 / 0) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .sm\:hover\:to-orange-300:hover {
+    --tw-gradient-to: #fdba74 var(--tw-gradient-to-position);
+  }
+
+  .sm\:hover\:text-orange-300:hover {
+    --tw-text-opacity: 1;
+    color: rgb(253 186 116 / var(--tw-text-opacity, 1));
+  }
+
+  .sm\:hover\:text-teal-600:hover {
+    --tw-text-opacity: 1;
+    color: rgb(13 148 136 / var(--tw-text-opacity, 1));
+  }
+
+  .sm\:hover\:text-zinc-700:hover {
+    --tw-text-opacity: 1;
+    color: rgb(63 63 70 / var(--tw-text-opacity, 1));
   }
 
   .group:hover .sm\:group-hover\:visible {
@@ -2476,6 +2740,22 @@ html.dark .services::after, html.dark .services::before{
 
   .group:hover .sm\:group-hover\:opacity-100 {
     opacity: 1;
+  }
+
+  .child\:sm\:text-lg > * {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:child-hover\:text-orange-300 > *:hover {
+    --tw-text-opacity: 1;
+    color: rgb(253 186 116 / var(--tw-text-opacity, 1));
+  }
+
+  .sm\:child-hover\:transition-colors > *:hover {
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
   }
 }
 
@@ -2691,6 +2971,10 @@ html.dark .services::after, html.dark .services::before{
 }
 
 @media (min-width: 1024px) {
+  .lg\:w-\[750px\] {
+    width: 750px;
+  }
+
   .lg\:w-\[95\%\] {
     width: 95%;
   }
@@ -2754,6 +3038,10 @@ html.dark .services::after, html.dark .services::before{
 
   .xl\:h-auto {
     height: auto;
+  }
+
+  .xl\:w-\[550px\] {
+    width: 550px;
   }
 
   .xl\:w-\[90\%\] {
